create send message action and apply it to send messages to firebase

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chat-app",
   "version": "0.0.1",
-  "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "description": "A vue chat app",
+  "productName": "Chat App",
   "author": "",
   "private": true,
   "scripts": {
