--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "core-js": "^3.6.5",
     "dotenv-webpack": "^3.0.0",
     "firebase": "^7.22.0",
-    "quasar": "^1.0.0"
+    "lottie-web": "^5.7.3",
+    "quasar": "^1.0.0",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
