--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "deploy": "push-dir --dir=dist/spa --remote=gh-pages --branch=main"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -16,6 +17,7 @@
     "dotenv-webpack": "^3.0.0",
     "firebase": "^7.22.0",
     "lottie-web": "^5.7.3",
+    "push-dir": "^0.4.1",
     "quasar": "^1.0.0",
     "vuex-persistedstate": "^4.0.0-beta.1"
   },
